相対パスに変更

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.120.1/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.120.1/examples/js/loaders/GLTFLoader.js"></script>
     <script>
-      const DUMMY_MONKEY_URL="/assets/model/dummy_monkey.gltf";
-      const MATCAP_URL="/assets/texture/matcap/matcap-porcelain-white.jpg";
+      const DUMMY_MONKEY_URL="./assets/model/dummy_monkey.gltf";
+      const MATCAP_URL="./assets/texture/matcap/matcap-porcelain-white.jpg";
       let scene = new THREE.Scene();
       let camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
 
