renderer.outputEncodingが必要だった。

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       let camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
 
       let renderer = new THREE.WebGLRenderer();
+      renderer.outputEncoding = THREE.sRGBEncoding;
       renderer.setSize( window.innerWidth, window.innerHeight );
       document.body.appendChild( renderer.domElement );
 
@@ -86,7 +87,6 @@
                 break;
                 case 4:
                 {
-                  const map=clone.material.map.clone();
                   clone.material=new THREE.MeshStandardMaterial({
                     map:map,
                   });
